# DataStructureLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  make.sh
.github/ISSUE_TEMPLATE/: bugreport.md  config.yml
.github/workflows/: linux.yml  macos.yml  windows.yml
cmake/: dataStructure.cmake  versionedObject.cmake
include/: dataStructure.h
include/biMap/: BiMap.h
include/versionedObject/: ChangesInDataSet.h  SnapshotDataSet.h  VersionedObject.h  VersionedObjectBuilder.h  VersionedObjectPriorityMerge.h  VersionedObjectStream.h  versionedObject.h
packaging/: dataStructure-config.cmake.in
tests/: CMakeLists.txt  testBasicTimeline.cpp  testBuildForwardTimeline.cpp  testBuildForwardTimelineMetaData.cpp  testBuildForwardTimelineNoMetaData.cpp  testBuildReverseTimeline.cpp  testBuildReverseTimelineMetaData.cpp  testBuildReverseTimelineNoMetaData.cpp  testPriorityMergeMetaData.cpp  testPriorityMergeNoMetaData.cpp  unittest.h
tests/biMap/: CMakeLists.txt  testBiMap_LR11_RL11.cpp  testBiMap_LR1M_RL11.cpp
tests/versionedObject/: CMakeLists.txt  main.cpp  testBuildBidirectionTimelineMetaData_bidirection_DELISTED.cpp  testBuildBidirectionTimelineMetaData_bidirection_RELISTED.cpp  testBuildBidirectionTimelineMetaData_bidirection_RELISTED_1.cpp  testBuildBidirectionTimelineMetaData_bidirection_RELISTED_2.cpp  testBuildBidirectionTimelineMetaData_bidirection_RELISTED_v1.cpp  testBuildBidirectionTimelineMetaData_bidirection_RELISTED_v2.cpp  testBuildBidirectionTimelineMetaData_changeFullList_Forward.cpp  testBuildBidirectionTimelineMetaData_changeFullList_Reverse.cpp  testBuildBidirectionTimelineMetaData_changeSplitList_Forward.cpp  testBuildBidirectionTimelineMetaData_changeSplitList_Reverse.cpp  testBuildBidirectionTimelineMetaData_forward.cpp  testBuildBidirectionTimelineMetaData_multiForward.cpp  testBuildBidirectionTimelineMetaData_multiReverse_v1.cpp  testBuildBidirectionTimelineMetaData_multiReverse_v2.cpp  testBuildBidirectionTimelineMetaData_reverse.cpp  testBuildBidirectionTimelineMetaData_reverse_FirstDeltaChangeBeforeStartDate.cpp  testBuildBidirectionTimelineNoMetaData_bidirection_DELISTED.cpp  testBuildBidirectionTimelineNoMetaData_bidirection_RELISTED.cpp  testBuildBidirectionTimelineNoMetaData_bidirection_RELISTED_1.cpp  testBuildBidirectionTimelineNoMetaData_bidirection_RELISTED_2.cpp  testBuildBidirectionTimelineNoMetaData_bidirection_RELISTED_v1.cpp  testBuildBidirectionTimelineNoMetaData_bidirection_RELISTED_v2.cpp  testBuildBidirectionTimelineNoMetaData_changeFullList_Forward.cpp  testBuildBidirectionTimelineNoMetaData_changeFullList_Reverse.cpp  testBuildBidirectionTimelineNoMetaData_changeSplitList_Forward.cpp  testBuildBidirectionTimelineNoMetaData_changeSplitList_Reverse.cpp  testBuildBidirectionTimelineNoMetaData_forward.cpp  testBuildBidirectionTimelineNoMetaData_multiForward.cpp  testBuildBidirectionTimelineNoMetaData_multiReverse.cpp  testBuildBidirectionTimelineNoMetaData_multiReverse_v1.cpp  testBuildBidirectionTimelineNoMetaData_multiReverse_v2.cpp  testBuildBidirectionTimelineNoMetaData_reverse.cpp  testBuildBidirectionTimelineNoMetaData_reverse_FirstDeltaChangeBeforeStartDate.cpp  testBuildForwardTimelineMetaData.cpp  testBuildForwardTimelineMetaData_ChangeFullList.cpp  testBuildForwardTimelineMetaData_ChangeSplitList.cpp  testBuildForwardTimelineNoMetaData.cpp  testBuildForwardTimelineNoMetaData_ChangeFullList.cpp  (+19 more)
tests/versionedObject/include/: testHelper.h  unittest.h
